# skills

./: .gitignore  AGENTS.md  CHANGELOG.md  OAT.xml  README.md  package.json
.claude-plugin/: marketplace.json
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
.gitcode/ISSUE_TEMPLATE/: bug-report-.yml  documentation.yml  feature-request.yml  question.yml
.opencode/: INSTALL.md
.opencode/plugins/: cannbot.js
agents/: pypto-op-developer.md
agents/ascendc-kernel-developer/: ascendc-kernel-developer.md
agents/ascendc-kernel-reviewer/: ascendc-kernel-reviewer.md
agents/ascendc-ops-architect/: AGENT.md
agents/ascendc-ops-architect/references/: detailed-design-template.template
agents/ascendc-ops-reviewer/: AGENT.md
docs/: STANDARDS.md  skills-usage.md
model/agents/: model-infer-analyzer.md  model-infer-implementer.md  model-infer-reviewer.md
model/teams/infer-model-optimize-team/: AGENTS.md  init.sh  (+1 more)
ops-lab/ops-easyasc-dsl/: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_CN.md  ops-easyasc-dsl-migration-manual.md  requirements.txt  sitecustomize.py  wsl_setenv.sh
ops/agents/: ascendc-kernel-architect.md  ascendc-kernel-developer.md  ascendc-ops-reviewer.md  pypto-op-perf-tuner.md
ops/ascendc-api-best-practices/: SKILL.md
ops/ascendc-direct-invoke-template/: SKILL.md
ops/ascendc-performance-best-practices/: SKILL.md
ops/ascendc-registry-invoke-template/: SKILL.md
ops/ascendc-registry-invoke-template/references/add_example/: CMakeLists.txt  README.md  build.sh
ops/ascendc-registry-invoke-template/references/add_example/examples/: CMakeLists.txt  CMakeLists_geir.txt  run.sh  test_aclnn_add_example.cpp  test_geir_add_example.cpp
ops/ascendc-registry-invoke-template/references/add_example/op_api/: aclnn_add_example.cpp  aclnn_add_example.h  add_example.cpp  add_example.h
ops/ascendc-registry-invoke-template/references/add_example/op_graph/: CMakeLists.txt  add_example_proto.h
ops/ascendc-registry-invoke-template/references/add_example/op_host/: CMakeLists.txt  add_example_def.cpp  add_example_infershape.cpp
ops/ascendc-registry-invoke-template/references/add_example/op_host/arch22/: add_example_tiling.cpp
ops/ascendc-registry-invoke-template/references/add_example/op_host/arch35/: add_example_tiling.cpp
ops/ascendc-registry-invoke-template/references/add_example/op_kernel/: CMakeLists.txt  add_example_arch22.cpp  add_example_arch35.cpp
ops/ascendc-registry-invoke-template/references/add_example/op_kernel/arch22/: add_example.h  add_example_tiling_data.h  add_example_tiling_key.h
ops/ascendc-registry-invoke-template/references/add_example/op_kernel/arch35/: add_example.h  add_example_tiling_data.h  add_example_tiling_key.h
ops/ascendc-registry-invoke-template/references/add_example/tests/st/: CMakeLists.txt  README.md  run.sh  test_aclnn_add_example.cpp
ops/ascendc-registry-invoke-template/references/add_example/tests/ut/: CMakeLists.txt  README.md  run.sh
ops/ascendc-registry-invoke-template/references/add_example/tests/ut/cmake/: BuildGoogleTest.cmake
ops/ascendc-registry-invoke-template/references/add_example/tests/ut/common/: any_value.h  infershape_case_executor.cpp  infershape_case_executor.h  infershape_context_faker.cpp  infershape_context_faker.h  tiling_case_executor.cpp  tiling_case_executor.h  tiling_context_faker.cpp  tiling_context_faker.h
ops/ascendc-registry-invoke-template/references/add_example/tests/ut/op_api/: CMakeLists.txt  test_aclnn_add_example.cpp  test_add_example.cpp  test_op_api_main.cpp  test_utils.h
ops/ascendc-registry-invoke-template/references/add_example/tests/ut/op_host/: CMakeLists.txt  test_add_example_infershape.cpp  test_add_example_tiling.cpp  test_op_host_main.cpp
ops/ascendc-registry-invoke-template/references/atvoss_add_example/: CMakeLists.txt  README.md  build.sh  custom_compile_options.ini  op_api  op_graph
ops/ascendc-registry-invoke-template/references/atvoss_add_example/examples/: test_aclnn_add_example.cpp
ops/ascendc-registry-invoke-template/references/atvoss_add_example/op_host/: CMakeLists.txt  add_example_def.cpp  add_example_infershape.cpp
ops/ascendc-registry-invoke-template/references/atvoss_add_example/op_host/arch35/: add_example_tiling.cpp
ops/ascendc-registry-invoke-template/references/atvoss_add_example/op_kernel/: CMakeLists.txt  add_example_apt.cpp
ops/ascendc-registry-invoke-template/references/atvoss_add_example/op_kernel/arch35/: add_example_dag.h  add_example_struct.h
ops/ascendc-registry-invoke-template/references/atvoss_add_example/tests/: st
ops/ascendc-registry-invoke-template/references/atvoss_add_example/tests/ut/: CMakeLists.txt  common  op_api  run.sh
ops/ascendc-registry-invoke-template/references/atvoss_add_example/tests/ut/op_host/: CMakeLists.txt  test_add_example_infershape.cpp  test_add_example_tiling.cpp  test_op_host_main.cpp
ops/ascendc-registry-invoke-to-direct-invoke/: SKILL.md
ops/ascendc-runtime-debug/: SKILL.md
ops/ascendc-st-design/: SKILL.md
ops/ascendc-tiling-design/: SKILL.md
ops/cann-env-setup/: SKILL.md
ops/torch-ascendc-op-extension/: SKILL.md
ops/torch-ops-profiler/: SKILL.md
plugins-official/ops-code-reviewer/: AGENTS.md  init.sh  quickstart.md
plugins-official/ops-direct-invoke/: AGENTS.md  init.sh  quickstart.md
plugins-official/pypto-op-orchestrator/: AGENTS.md  init.sh  quickstart.md
skills/ascendc-code-review/: SKILL.md
skills/ascendc-docs-search/: SKILL.md
skills/ascendc-npu-arch/: SKILL.md
skills/ascendc-tiling-design/: SKILL.md
skills/ascendc-ut-develop/: SKILL.md
teams/ascendc-kernel-dev-team/: AGENTS.md  init.sh  quickstart.md
teams/ops-direct-invoke/: init.sh  quickstart.md
teams/pypto-op-orchestrator/: AGENTS.md
tests/: README.md  run-tests.sh
tests/.version-state/: ops-direct-invoke.json  pypto-op-orchestrator.json
tests/integration/: test-simple-op-development.sh  test-workflow-execution.sh
tests/lib/: rules.yaml  skill_validator.py  test-helpers.sh
tests/tools/: analyze-session.sh  analyze-token-usage.py  analyze-tokens.sh  analyze-workflow.sh
(+239 files in other folders)
